--- a/docs/asciidocs/states-goals/15-09-2023.adoc
+++ b/docs/asciidocs/states-goals/15-09-2023.adoc
@@ -1,24 +1,27 @@
-= Aktueller Stand 15.09.2023
+= Meeting 15.09.2023
+Franklyn 3 Dev-Team
+15.Sep 2023: franklyn-quarkus
+:toc:
+:icons: font
+:url-quickref: https://docs.asciidoctor.org/asciidoc/latest/syntax-quick-reference/
 
-
-== Aktuell vorhanden
-
-
+== Aktuell vorhanden:
 
 - Ein Schüler-Client, der Screenshots aufnehmen kann.
 - Differnzen Rechnung.
-- Zusammenlegung von Frame.s
+- Zusammenlegung von Frames
 - Anzeigen der Frames auf Teacher-Client.
 - Aufzeichnen von Tests
 
-== Bugs und Probleme
+== Bugs und Probleme:
 
-Aktuell keine
+- Mp4 wird auf dem Examine-Client erstellt und nicht am Streaming-Server
 
+== Erledigte Aufgaben:
+-
 
-
-== Erledigte Aufgaben
-
+== Besprochene Themen:
+-
 
 == Ziele:
 
