--- a/docs/asciidocs/states-goals/15-09-2023.adoc
+++ b/docs/asciidocs/states-goals/15-09-2023.adoc
@@ -7,15 +7,15 @@ Franklyn 3 Dev-Team
 
 == Aktuell vorhanden:
 
-- Ein Schüler-Client, der Screenshots aufnehmen kann.
-- Differnzen Rechnung.
+- Ein Schüler-Client, der Screenshots aufnehmen kann
+- Differnzen Rechnung
 - Zusammenlegung von Frames
-- Anzeigen der Frames auf Teacher-Client.
+- Anzeigen der Frames auf Teacher-Client
 - Aufzeichnen von Tests
 
 == Bugs und Probleme:
 
-- Mp4 wird auf dem Examine-Client erstellt und nicht am Streaming-Server
+- .mp4 wird auf dem Examine-Client erstellt und nicht am Streaming-Server
 
 == Erledigte Aufgaben:
 -
