--- a/docs/asciidocs/minutes-of-meeting.adoc
+++ b/docs/asciidocs/minutes-of-meeting.adoc
@@ -1,8 +1,11 @@
 = Minutes of Meeting
 Franklyn 3 Dev-Team
-2023/24
-:toc:
+2023/24: franklyn-quarkus
+ifndef::imagesdir[:imagesdir: images]
+:sourcedir: ../src/main/java
 :icons: font
+:sectnums:    // Nummerierung der Überschriften / section numbering
+:toc: left
 
 include::states-goals/2023-09-15.adoc[]
 
