--- a/docs/asciidocs/technology-architecture/frame-types.adoc
+++ b/docs/asciidocs/technology-architecture/frame-types.adoc
@@ -1,5 +1,11 @@
 = Frame Management
-
+Franklyn 3 Dev-Team
+2023/24: franklyn-quarkus
+ifndef::imagesdir[:imagesdir: images]
+:sourcedir: ../src/main/java
+:icons: font
+:sectnums:    // Nummerierung der Überschriften / section numbering
+:toc: left
 
 
 == Verwendete Technologien
